# picopi8m-ros-demos

./: .gitignore  .gitlab-ci.yml  .gitmodules  Readme.md
benchmark/: .gitignore  Makefile  bench.sh  bench_m4char.cpp  bench_tty.cpp  benchmark.h  load_raw.c  rpmsg_char.cpp  tty.cpp
benchmark/benchmark_ros_m4/: CMakeLists.txt  benchmark.cpp  package.xml
benchmark/benchmark_ros_m4/m4/: CMakeLists.txt  main.cpp
benchmark/kernel_module/: Makefile  common.c  common.h  mu.c  ping.c  ping_bench.c
benchmark/m4/: CMakeLists.txt  main.c  main_mu.c  mu.c  ping.c
debugger/coredumper/: .gitignore  CMakeLists.txt  Makefile  Readme.md  create_coredump.c  hello.c
debugger/gdbserver/: CMakeLists.txt  Readme.md  callstack.c  debug.c  div_zero.c  gdbserver.py
debugger/memmanage/: CMakeLists.txt  Readme.md  print.c
demo_fake_m4_sensor/: CMakeLists.txt  app.launch  package.xml
demo_fake_m4_sensor/m4/: CMakeLists.txt  data.h  main.c
demo_fake_m4_sensor/msg/: Location.msg
demo_fake_m4_sensor/scripts/: kalman_filter.py
demo_fake_m4_sensor/src/: bridge.cpp
demo_gpio_blink/: CMakeLists.txt  package.xml
demo_gpio_blink/m4/: CMakeLists.txt  main.c  pin_mux.c  rpmsg_config.h
demo_gpio_blink/scripts/: blink_noros.py  bridge.py  pinctrl.py
gpio-concurency/: CMakeLists.txt  Makefile  Readme.md  linux.c  m4.c
gpio_interrupts/: CMakeLists.txt  Readme.md  package.xml
gpio_interrupts/m4/: CMakeLists.txt  gen_iomux.py  interrupts.cpp  interrupts.h  main.cpp  pins.h
gpio_interrupts/msg/: Count.msg  Counts.msg
gpio_interrupts/src/: show.cpp
gpio_interrupts/srv/: Enable.srv
linecam/: CMakeLists.txt  Readme.md  app.launch  display.html  package.xml
linecam/captures/: linecam_linux.logicdata  ros.bag
linecam/kernel_module/: Makefile  linecam.c
linecam/m4/: CMakeLists.txt  Readme.md  irq.cpp  linecam_irq.cpp  linecam_raw.cpp  linecam_simple.cpp  main.cpp  main.h  raw.cpp  ros_lib  simple.cpp
linecam/src/: common.h  display.cpp  linecam_kernel.cpp  linecam_linux.cpp
linux_periph/gpio/: .gitignore  Makefile  gpio_char.c  gpio_falling_edges.c  sysfs_falling_edge.c
linux_periph/i2c_adxl345/: .gitignore  Makefile  i2c_adxl345.cpp
linux_periph/i2c_ds1621/: .gitignore  Makefile  i2c_ds1621.c  i2c_ds1621.py
linux_periph/pwm/: Readme.md  pwm.c  pwm.sh
linux_periph/spi_adxl345/: .gitignore  Makefile  spi_adxl345.cpp
linux_periph/uart/: .gitignore  Makefile  sender.c  upper.c
m4/1wire_dht/: 1wire_dht.c  1wire_dht_irq.c  CMakeLists.txt
m4/cleanup/: CMakeLists.txt  bare.c
m4/cmake/: CMakeLists.txt  bare.c  main.c  rpmsg.c  rtos.c
m4/gpio/: CMakeLists.txt  gpio_blink.c  gpio_flip.c  gpio_input.c  gpio_irq.c
m4/hello/: hello.c
m4/i2c_adxl345/: CMakeLists.txt  Readme.md  i2c2_adxl345.cpp
m4/i2c_ds1621/: CMakeLists.txt  ds1621.c  ds1621.h  i2c2.c  i2c2_rtos.c  i2c3.c
m4/mpu/: CMakeLists.txt  mpu_disable_ddr.c  mpu_freertos.c  mpu_rpmsg.c
m4/pwm/: CMakeLists.txt  linux_test.sh  pwm.c
m4/rdc/: CMakeLists.txt  Readme.md  rdc_gpio3_m4_only.c
m4/rpmsg/: CMakeLists.txt  return_borrowed.c
m4/spi/: CMakeLists.txt  spi1.c  spi1_gpio_cs.c  spi1_hw_cs.c  spi2.c  spi3.c
m4/spi_adc128s102/: CMakeLists.txt  adc128s102_raw.c  adc128s102_rtos.c  adc128s102_simple.c  adc128s102_single.c  adc128s102_sw.c  common.h
m4/spi_ads1118/: CMakeLists.txt  ads1118_busy_waiting.c  ads1118_irq.c
m4/spi_adxl345/: CMakeLists.txt  Readme.md  adxl345_rtos.c
m4/timers/: CMakeLists.txt  gpt1.c  systick.c
m4/uart/: CMakeLists.txt  uart1.c  uart3.c  uart4.c  uart4_irq.c  uart4_readline.c
m4_hello_tty/: CMakeLists.txt  package.xml
m4_hello_tty/m4/: CMakeLists.txt  main_remote.c
m4_hello_tty/src/: generator.cpp  m4core.cpp  proxy.cpp  send.cpp
m4char/: .gitignore  Makefile  Readme.md  count_recv.cpp  main.c  spam.cpp
m4char/kernel_module/: Makefile  rpmsg_m4char.c
m4char/m4/: CMakeLists.txt  main.c
m4ctrl/: CMakeLists.txt  package.xml
m4ctrl/src/: hello.cpp  m4core.cpp  m4core.h  m4ctl.cpp  m4ctrl.cpp
m4ctrl/srv/: Start.srv
motors/: CMakeLists.txt  Readme.md  benchmark.h  demo.c  feed.sh  feed2.sh  motors.c  motors.h  ros.cpp
motors/carmotor_msgs/: CMakeLists.txt  package.xml
motors/carmotor_msgs/msg/: CarMotor.msg
ping/: Readme.md  sendping.cpp
ping/m4/: CMakeLists.txt  main.c
ros_m4_demo/: CMakeLists.txt  Readme.md  app.launch  base.launch  demo.perspective  demo_fake_m4_sensor.perspective  package.xml
ros_m4_demo/m4/: CMakeLists.txt  main.cpp
ros_m4_demo/msg/: Print.msg
ros_m4_demo/scripts/: kalman_filter.py
ros_m4_demo/src/: publisher.cpp  service_call.cpp  service_server.cpp  subscriber.cpp
ros_m4_demo/srv/: Pause.srv  SetSigma.srv
ros_m4ctl/: CMakeLists.txt  Readme.md  launch.xml  m4ctl  package.xml
ros_m4ctl/m4/: CMakeLists.txt
ros_m4ctl/src/: hello.cpp  m4ctrl.cpp
rosserial_rpmsg/: CMakeLists.txt  Readme.md  package.xml
rosserial_rpmsg/example/: CMakeLists.txt  Readme.md  fake_sensor.cpp  hello.cpp  launch.xml  launch_m4char.xml  launch_tty.xml
rosserial_rpmsg/example/ros_lib/: ros.h
rosserial_rpmsg/example/ros_lib/demo_fake_m4_sensor/: Location.h  Pause.h
rosserial_rpmsg/example/ros_lib/m4ctrl/: Start.h  Stop.h
rosserial_rpmsg/src/ros_lib/: RpmsgHardware.h  ros.h
rosserial_rpmsg/src/rosserial_rpmsg/: make_libraries.py  serial_node.py
rpmsg/examples/: .gitignore  Makefile  Readme.md  m4char.c  tty.c
rpmsg/examples/m4/: CMakeLists.txt  rpmsg.c  rsc_table.c  rsc_table.h
rpmsg/udp/: .gitignore  Makefile  Readme.md  broadcast_recv.c  multicast4_recv.c  multicast6_recv.c
rpmsg/udp/kernel_module/: Makefile  rpmsg_udp.c
rpmsg/udp/m4/: CMakeLists.txt  rpmsg.c  rpmsg_udp.c
strupper_notify_ttyclose_via_signal/: Readme.md  m4run  main.cpp
strupper_notify_ttyclose_via_signal/m4/: main.c
support/: gpio-bisect.py
tools/: .gitignore  Makefile  dump_rpmsg.c  m4build  m4ctl  m4ctl.cpp  m4run  setup.bash
