<?xml version="1.0"?>
<package format="2">
  <name>linecam</name>
  <version>0.0.0</version>
  <description>Demo application that shows linecam usage</description>
  <maintainer email="daniel.trnka@gmail.com">Daniel Trnka</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
</package>
