<?xml version="1.0"?>
<package format="2">
  <name>m4ctrl</name>
  <version>0.0.0</version>
  <description>The m4ctrl package</description>

  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
