<?xml version="1.0"?>
<package format="2">
  <name>ros_m4ctl</name>
  <version>0.0.0</version>
  <description>The ros_m4ctl package</description>

  <maintainer email="daniel.trnka@gmail.com">Daniel Trnka</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
