cmake_minimum_required(VERSION 2.8.3)
project(rosserial_rpmsg)

find_package(catkin REQUIRED COMPONENTS
  message_generation
)

#catkin_python_setup()

#generate_messages()

#catkin_install_python(
#  PROGRAMS src/${PROJECT_NAME}/make_libraries.py nodes/serial_node.py
#  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
#)
